RESOLVED FIXED 263164
WKWebView does not respect `-[UIScrollView allowsKeyboardScrolling]`
https://bugs.webkit.org/show_bug.cgi?id=263164
Summary WKWebView does not respect `-[UIScrollView allowsKeyboardScrolling]`
Richard Robinson
Reported 2023-10-14 18:30:25 PDT
Attachments
Richard Robinson
Comment 1 2023-10-14 18:38:52 PDT
EWS
Comment 2 2023-10-16 13:40:08 PDT
Committed 269378@main (ff056c129d9c): <https://commits.webkit.org/269378@main> Reviewed commits have been landed. Closing PR #19089 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.